--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html * {
     font-family: 'Roboto', sans-serif;
+    line-height: 1.7;
 }
 
 a, a:hover {
@@ -42,7 +43,6 @@ code {
 }
 
 .release {
-    background-color: rgba(127, 140, 141, 0.1);
     border: solid 1px rgba(127, 140, 141, 0.4);
     padding: 20px;
     border-radius: 5px;
@@ -65,7 +65,6 @@ code {
 }
 
 .latest-release {
-    background-color: rgba(92, 184, 92, 0.2);
     border-color: rgba(92, 184, 92, 0.4);
 }
 
@@ -80,7 +79,7 @@ code {
 .latest-release .release-hr {
     border-color: rgba(92, 184, 92, 0.4);
 }
-
+.release b { padding:0 3px; background:rgba(92, 184, 92, 1); color:#fff; }
 .pre-release {
     background-color: rgba(240, 173, 78, 0.05);
     border-color: rgba(240, 173, 78, 0.4);
